# mRAG

./: .env.example  .gitignore  DEVELOPER_NOTES.md  README.md  pyproject.toml  requirements.txt
benchmarks/: benchmark-results-100k-2026-07-05.json  benchmark-results-100k-2026-07-05.md  benchmark-results-2026-07-05.md  benchmark-results-associative-2026-07-05.json  benchmark-results-associative-2026-07-05.md  benchmark-results-convomem-verbatim-memory-24q-2026-07-08.md  benchmark-results-convomem-verbatim-memory-24q-v3-2026-07-08.md  benchmark-results-locomo-2026-07-05.md  benchmark-results-locomo-2026-07-06.md  benchmark-results-locomo-2026-07-07.md  benchmark-results-locomo-verbatim-memory-conv0-40q-strict-2026-07-08.md  benchmark-results-longmemeval-s-long-2026-07-07.md  benchmark-results-longmemeval-s-seed42-40q-2026-07-07.md  benchmark-results-longmemeval-s.md  benchmark-results-niah-2026-07-05.json  benchmark-results-niah-2026-07-05.md  benchmark-results-token-efficiency-2026-07-05.json  benchmark-results-token-efficiency-2026-07-05.md  benchmark-summary-2026-07-05.md  convomem-mrag-verbatim-24q-v2-clean-prompt-2026-07-08.json  convomem-mrag-verbatim-24q-v3-clean-prompt-2026-07-08.json  legacy-benchmark-results-100k-2026-07-05.md  legacy-benchmark-results-associative-2026-07-05.md  legacy-benchmark-results-niah-2026-07-05.md
examples/: langgraph_integration.py  ollama_integration.py  soul_import_example.py
mrag/: __init__.py  _compat.py
tests/: run_100k_benchmark.py  run_associative_benchmark.py  run_locomo_benchmark.py  run_longmemeval_benchmark.py  (+20 more)
(+13 files in other folders)
