[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mrag"
version = "0.1.0"
description = "Micro-RAG (mRAG): An agnostic agentic memory management system."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy"
]

[project.optional-dependencies]
chromadb = [
    "chromadb"
]
pinecone = [
    "pinecone"
]
clustering = [
    "scikit-learn>=1.3"
]
state_bench = [
    "openai>=1.0.0",
    "azure-identity>=1.15.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "tiktoken>=0.12.0",
    "tenacity>=9.1.2",
]
dev = [
    "pytest"
]

[tool.setuptools]
packages = ["mrag"]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["state_bench", "beam", "venv", ".git"]

